remove color change for nav link hover effect due to color contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,6 @@ h1, h2 {
     font-size: 1.5rem;
 }
 .nav__link:hover {
-    color: var(--magenta);
     text-decoration: underline;
 }
 .nav__logo {
